--- a/css/reveal.css
+++ b/css/reveal.css
@@ -1355,3 +1355,22 @@ body {
 
 .zoomed .reveal .roll span:after {
   visibility: hidden; }
+
+
+
+.reveal table {
+  margin: auto;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.reveal table th {
+  font-weight: bold;
+}
+
+.reveal table th,
+.reveal table td {
+  text-align: left;
+  padding: 0.2em 0.5em 0.2em 0.5em;
+  border-bottom: 1px solid;
+}
